# python-tiff-transpose

./: CMakeLists.txt  Stack Transposer.sln  environment.yml  list_test.py  vol2tp  vol2tp_new.py
Source/: files.cpp  files.hpp  main.cpp  stdafx.h  tiff.cpp  tiff.hpp
Stack Transposer/: Stack Transposer.vcxproj  Stack Transposer.vcxproj.filters  packages.config
python_old/: LICENSE  vol2tp_new.py
src/: CMakeLists.txt  files.cpp  main.cpp  stdafx.h
